# codename-launcher

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  format.sh
googletest/: CTestTestfile.cmake
src/: engine.cpp  engine.h  engine_overview.cpp  engine_overview.h  engine_selector.cpp  engine_selector.h  global.cpp  global.h  main.cpp  main.h
src/ui/: button.cpp  button.h  checkbox.cpp  checkbox.h  container.cpp  container.h  object.cpp  object.h  sprite.cpp  sprite.h  text.cpp  text.h
